@@ -5,5 +5,6 @@
 	- When you close a hub view now, the first one in the list will automatically be selected now.
 	- Fix a bug where auto-reconnect would spawn large amounts of threads, and then lock up the app when you went to close the window.
 	- Added tab-completion for names.
+	- Added Swedish translation, thanks Mikael Konradson.
 0.5.0 
 	- First release
